--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ h4 {
   color: white;
 }
 
+.content:nth-child(odd) a {
+  color: black;
+}
+
   .content a {
     color: #eee;
     border-bottom: 1px solid #eee;
