--- a/css/style.css
+++ b/css/style.css
@@ -1,133 +1,104 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Code+Pro:400,500);
-html, body {height: 100%; width: 100%}
-body {
-  font-family: 'Source Code Pro', monospace;
-  line-height: 1.5;
+@import url("//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css");
+
+html {
+  font-size: 10px;
+  height: 100%;
 }
 
-h1,h2,h3,h4 {
-  font-weight: 500;
+body {
+  font-family: Hack, monospace;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+h1 {
+  font-size: 3.5rem;
+  margin: 0.25em 0;
 }
 
 h4 {
-  font-size: 1.5em;
+  font-size: 2.25rem;
+  border-bottom: 1px solid #dfdfdf;
+  margin: 0.125em 0;
 }
 
-.lead {
-  font-weight: 500;
-  font-size: 1.2em;
-}
-.text-center {
-  text-align: center;
-}
-.text-right {
-  text-align: right;
-}
-.text-left {
-  text-align: left;
+.container {
+  box-sizing: border-box;
+  padding: 0 1em;
+  max-width: 960px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
-.pull-left {
-  float: left;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+
+  flex-grow: 1;
 }
 
-.pull-right {
-  float: right;
-}
-
-.uppercase {
-  text-transform: uppercase;
-}
-
-.inline li {
-  display: inline-block;
-}
-
-.outline {
-  outline: 1px solid red;
-}
-
-.navbar {
-  z-index: 1;
-  background: white;
-  position: fixed;
-  width: 100%;
-}
-
-.nav {
-  position: relative;
-  float: right;
-}
-  .nav li{
-    display: inline-block;
-  }
-    .nav li a {
-      display: block;
-      padding: 10px 15px;
-      color: black;
-
-    }
-    .nav li a:hover {
-      text-decoration: none;
-      border-bottom: 1px solid black;
-      margin-bottom: -1px;
-    }
-
-.content {
-  overflow-x:hidden;
-  padding: 30% 0 40% 0;
-}
-
-.content:nth-child(even) {
-  background: black;
-  background-image: url('dark_wood_@2X.png');
-  color: white;
-}
-
-.content:nth-child(odd) a {
-  color: black;
-}
-
-  .content a {
-    color: #eee;
-    border-bottom: 1px solid #eee;
-  }
-  .content a:hover {
-    text-decoration: none;
-    opacity: 0.8;
-  }
-
-h1 {
-  font-size: 2.35em;
-}
-.intro {
-  font-size: 1.35em;
-  position: relative;
-  top: 25%;
-}
-
-.middle {
-  position: relative;
-}
-
-input, textarea {
-  color: black;
-  display: block;
-  margin: 5px auto;
-  width: 50%;
-}
-#submit {
-  color: black;
-  display: block;
-  padding: 5px 8px;
-}
-
-
-.project-wrapper {
-  padding: 5px 10px;
-  margin: 4px auto;
-}
-
-.project-wrapper img {
+.wrapper__item {
+  box-sizing: border-box;
+  padding: 0 1em;
   margin: 0 auto;
+}
+
+@media (min-width: 76.8rem) {
+  .wrapper {
+    flex-direction: row;
+    margin-top: 4rem;
+  }
+
+  .wrapper__item {
+    flex: 1 1 90%;
+    text-align: center;
+  }
+
+  .hidden-lg {
+    display: none;
+  }
+}
+
+.about__heading,
+.personal__heading
+{
+  font-size: 1.8rem;
+}
+
+.about__txt,
+.personal__txt
+ {
+  font-size: 1.6rem;
+}
+
+.footer-links {
+  font-size: 1.2rem;
+}
+
+.footer-links__twitter {
+  color: #4099ff;
+}
+
+.footer-links__twitter:hover {
+  color: #1880f9;
+}
+
+.footer-links__gmail {
+  color: #dd4b39;
+}
+
+.footer-links__gmail:hover {
+  color: #d92e19;
+}
+
+.footer-links__github {
+  color: #c9510c;
+}
+
+.footer-links__github:hover {
+  color: #ad480d;
 }
