--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css");
 
 html {
-  font-size: 10px;
+  font-size: 22px;
   height: 100%;
 }
 
@@ -11,22 +11,23 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
+  line-height: 1.6;
 }
 
 h1 {
-  font-size: 3.5rem;
+  font-size: 2.5rem;
   margin: 0.25em 0;
 }
 
 h4 {
-  font-size: 2.25rem;
+  font-size: 1.25rem;
   border-bottom: 1px solid #dfdfdf;
   margin: 0.125em 0;
 }
 
 .container {
   box-sizing: border-box;
-  padding: 0 1em;
+  padding: 0 2.75rem;
   max-width: 960px;
   margin: auto;
   display: flex;
@@ -48,16 +49,16 @@ h4 {
 
 .about__heading,
 .personal__heading {
-  font-size: 1.8rem;
+  font-size: 1.2rem;
 }
 
 .about__txt,
 .personal__txt {
-  font-size: 1.6rem;
+  font-size: 1.1rem;
 }
 
 .footer-links {
-  font-size: 1.2rem;
+  font-size: 1rem;
   display: flex;
   flex-direction: column;
 }
@@ -95,16 +96,9 @@ h4 {
   color: #0077b5;
 }
 
-.me {
-  display: block;
-  width: 500px;
-  margin: 0 auto;
-}
-
 @media (min-width: 76.8rem) {
   .wrapper {
-    flex-direction: row;
-    margin-top: 4rem;
+    margin-top: 1rem;
   }
 
   .wrapper__item {
